--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 
 @import "tailwindcss";
-
+#root {
+  padding: 0 !important;
+}
 @theme {
   --color-primary: #030014;
 
