--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,8 @@
   }
 
   .wrapper {
-    @apply px-5 py-12 xs:p-10 max-w-7xl mx-auto flex flex-col relative z-10;
+    @apply px-5 py-12 xs:p-10 max-w-7xl  flex flex-col relative z-10;
+    margin: auto0;
   }
 
   .trending {
