--- a/src/index.css
+++ b/src/index.css
@@ -52,12 +52,11 @@
 
 @layer components {
   .pattern {
-    @apply bg-hero-pattern w-screen h-screen bg-center bg-cover absolute z-0;
+    @apply bg-hero-pattern w-full h-screen bg-center bg-cover absolute z-0;
   }
 
   .wrapper {
     @apply px-5 py-12 xs:p-10 max-w-7xl  flex flex-col relative z-10;
-    margin: auto0;
   }
 
   .trending {
